tests/transpiler/x/java/if_else.error
exit status 1
Main.java:7: error: illegal start of expression
        ]}
        ^
1 error
